--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data_process import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "6x16 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5536/5536 [00:00<00:00, 18829.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5536, 96) (5536,)\n",
+      "times 0 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 0 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 1 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 1 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 2 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 2 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 3 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 3 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 4 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 4 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_path=\"./data/Trainingdata_WS_Month_1.0/inputs/\"\n",
+    "label_path=\"./data/Trainingdata_WS_Month_1.0/labels/\"\n",
+    "\n",
+    "\n",
+    "kfold_load_process_save_data(data_path, label_path, is_augment=False, data_shape=\"6x16\", oversampling=\"\", kfold=2, times=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2768, 6, 16)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data16x6 = np.load(\"./data/2fold/6x16/T0_fold0_noOversampling_X_train.npy\")\n",
+    "data16x6.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 16)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data16x6[0].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# OneDCNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +160,7 @@
        "153873"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +246,7 @@
        "153873"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +287,7 @@
        "torch.Size([128, 17])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -318,22 +431,22 @@
     {
      "data": {
       "text/plain": [
-       "358289"
+       "145553"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = EquiOneDCNN(n_channels=64, hidden=128, n_classes=17)\n",
+    "model = EquiOneDCNN(n_channels=32, hidden=128, n_classes=17)\n",
     "sum([p.numel() for p in model.parameters()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +467,7 @@
        "torch.Size([128, 17])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
