--- a/demo.ipynb
+++ b/demo.ipynb
@@ -65,40 +65,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdata_process\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "File \u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\data_process.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mscio\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_process import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'kfold_load_process_save_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 7\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data_path\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m./data/Trainingdata_WS_Month_1.0/inputs/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m label_path\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m./data/Trainingdata_WS_Month_1.0/labels/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m kfold_load_process_save_data(data_path, label_path, is_augment\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, data_shape\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m6x16\u001b[39m\u001b[39m\"\u001b[39m, oversampling\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m, kfold\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, times\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'kfold_load_process_save_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "6x16 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5536/5536 [00:00<00:00, 20278.42it/s]\n",
+      "d:\\anaconda3\\envs\\timm\\lib\\site-packages\\numpy\\core\\fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5536, 96) (5536,)\n",
+      "times 0 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 0 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 1 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 1 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 2 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 2 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 3 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 3 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 4 fold 0\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n",
+      "times 4 fold 1\n",
+      "(2768, 6, 16) (2768,) (2768, 6, 16) (2768,)\n"
      ]
     }
    ],
@@ -112,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,12 +331,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# equionedcnn"
+    "# EquiOneDCNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +463,7 @@
        "1041809"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,19 +475,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1  torch.Size([128, 64, 9, 16])\n",
-      "1  torch.Size([128, 64, 9, 8])\n",
-      "2  torch.Size([128, 128, 7, 8])\n",
-      "2  torch.Size([128, 128, 7, 4])\n",
-      "3  torch.Size([128, 256, 5, 4])\n",
-      "3  torch.Size([128, 256, 5, 1])\n"
+      "1  torch.Size([128, 128, 9, 16])\n",
+      "1  torch.Size([128, 128, 9, 8])\n",
+      "2  torch.Size([128, 256, 7, 8])\n",
+      "2  torch.Size([128, 256, 7, 4])\n",
+      "3  torch.Size([128, 512, 5, 4])\n",
+      "3  torch.Size([128, 512, 5, 1])\n"
      ]
     },
     {
@@ -476,7 +496,7 @@
        "torch.Size([128, 17])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
