--- a/demo.ipynb
+++ b/demo.ipynb
@@ -884,24 +884,24 @@
     "        out = self.c1(x)\n",
     "        out = self.pool(out, kernel_size=4, stride=1, padding=1)\n",
     "        out = torch.relu(self.bn1(out))\n",
-    "        print(\"0 \", out.shape)\n",
+    "        # print(\"0 \", out.shape)\n",
     "        # -----\n",
     "        out = self.pool(out, kernel_size=4, stride=1, padding=1)\n",
     "        out = self.first_block(out)\n",
-    "        print(\"1 \", out.shape)\n",
+    "        # print(\"1 \", out.shape)\n",
     "        out = self.pool(out, kernel_size=4, stride=1, padding=1)\n",
     "        out = self.sec_block(out)\n",
-    "        print(\"2 \", out.shape)\n",
+    "        # print(\"2 \", out.shape)\n",
     "        out = self.pool(out, kernel_size=4, stride=1, padding=1)\n",
     "        out = self.thrd_block(out)\n",
-    "        print(\"3 \", out.shape)\n",
+    "        # print(\"3 \", out.shape)\n",
     "        out = self.pool(out, kernel_size=4, stride=4, padding=1)\n",
     "        out = self.frth_block(out)\n",
-    "        print(\"4 \", out.shape)\n",
+    "        # print(\"4 \", out.shape)\n",
     "        # Global pooling\n",
     "        out = torch.mean(out, dim=-1, keepdim=True) # pool over the time axis\n",
     "        out = self.c_out(out)\n",
-    "        print(\"5 \", out.shape)\n",
+    "        # print(\"5 \", out.shape)\n",
     "        # Then turn into features per time point (merging scale and the channel axes)\n",
     "        out = torch.max(out, dim=-2).values  # pool over the scale axis\n",
     "        out = out.view(out.size(0), 10)\n",
