convnext prepared; start training

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path=\"./data/Trainingdata_WS_Month_1.0/inputs/\"\n",
+    "label_path=\"./data/Trainingdata_WS_Month_1.0/labels/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5536/5536 [00:00<00:00, 20278.42it/s]\n",
+      "100%|██████████| 5536/5536 [00:00<00:00, 19706.32it/s]\n",
       "d:\\anaconda3\\envs\\timm\\lib\\site-packages\\numpy\\core\\fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
       "  return bound(*args, **kwds)\n"
      ]
@@ -123,16 +133,12 @@
     }
    ],
    "source": [
-    "data_path=\"./data/Trainingdata_WS_Month_1.0/inputs/\"\n",
-    "label_path=\"./data/Trainingdata_WS_Month_1.0/labels/\"\n",
-    "\n",
-    "\n",
     "kfold_load_process_save_data(data_path, label_path, is_augment=False, data_shape=\"6x16\", oversampling=\"\", kfold=2, times=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +147,7 @@
        "(2768, 6, 16)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,22 +159,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "16x16x1 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5536/5536 [00:00<00:00, 20057.78it/s]\n",
+      "d:\\anaconda3\\envs\\timm\\lib\\site-packages\\numpy\\core\\fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5536, 96) (5536,)\n",
+      "times 0 fold 0\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 0 fold 1\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 1 fold 0\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 1 fold 1\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 2 fold 0\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 2 fold 1\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 3 fold 0\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 3 fold 1\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 4 fold 0\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n",
+      "times 4 fold 1\n",
+      "(2768, 16, 16, 1) (2768,) (2768, 16, 16, 1) (2768,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kfold_load_process_save_data(data_path, label_path, is_augment=False, data_shape=\"16x16x1\", oversampling=\"\", kfold=2, times=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6, 16)"
+       "(2768, 16, 16, 1)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data16x6[0].shape"
+    "data16x16x1 = np.load(\"./data/2fold/16x16x1/T0_fold0_noOversampling_X_train.npy\")\n",
+    "data16x16x1.shape"
    ]
   },
   {
@@ -516,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,28 +687,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "514497"
+       "1489089"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resnet = get_ResNet(num_blocks=[1,1,1,1], num_classes=17, resolution=(16,16))\n",
+    "# resnet = get_ResNet(num_blocks=[1,1,1,1], num_classes=17, resolution=(16,16))           \n",
+    "# # 514497 (original: 8,054,609)\n",
+    "\n",
+    "resnet = get_ResNet(num_blocks=[3,4,6,3])\n",
+    "# 1489089 (original: 23,546,705)\n",
+    "\n",
     "sum([p.numel() for p in resnet.parameters()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +722,7 @@
        "torch.Size([128, 17])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,13 +1091,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# efficientnet"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1049,68 +1108,165 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[WinError 127] 找不到指定的程序。 Error loading \"d:\\anaconda3\\envs\\torch\\lib\\site-packages\\torch\\lib\\nvfuser_codegen.dll\" or one of its dependencies.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#X45sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodel\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "File \u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\model\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mresnet\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39monedcnn\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mequiresnet\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "File \u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\model\\resnet.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moptim\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39moptim\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnn\u001b[39;00m\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\torch\\lib\\site-packages\\torch\\__init__.py:128\u001b[0m\n\u001b[0;32m    126\u001b[0m     err \u001b[39m=\u001b[39m ctypes\u001b[39m.\u001b[39mWinError(last_error)\n\u001b[0;32m    127\u001b[0m     err\u001b[39m.\u001b[39mstrerror \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m Error loading \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdll\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m or one of its dependencies.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> 128\u001b[0m     \u001b[39mraise\u001b[39;00m err\n\u001b[0;32m    129\u001b[0m \u001b[39melif\u001b[39;00m res \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    130\u001b[0m     is_loaded \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[1;31mOSError\u001b[0m: [WinError 127] 找不到指定的程序。 Error loading \"d:\\anaconda3\\envs\\torch\\lib\\site-packages\\torch\\lib\\nvfuser_codegen.dll\" or one of its dependencies."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from model import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ConvNeXt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#X44sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model \u001b[39m=\u001b[39m ConvNeXt(depths\u001b[39m=\u001b[39m[\u001b[39m3\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m3\u001b[39m], dims\u001b[39m=\u001b[39m[\u001b[39m96\u001b[39m, \u001b[39m192\u001b[39m, \u001b[39m384\u001b[39m, \u001b[39m768\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ConvNeXt' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = ConvNeXt(depths=[3, 3, 9, 3], dims=[96, 192, 384, 768])"
+    "class ConvNeXt(nn.Module):\n",
+    "    r\"\"\" ConvNeXt\n",
+    "        A PyTorch impl of : `A ConvNet for the 2020s`  -\n",
+    "          https://arxiv.org/pdf/2201.03545.pdf\n",
+    "\n",
+    "    Args:\n",
+    "        in_chans (int): Number of input image channels. Default: 3\n",
+    "        num_classes (int): Number of classes for classification head. Default: 1000\n",
+    "        depths (tuple(int)): Number of blocks at each stage. Default: [3, 3, 9, 3]\n",
+    "        dims (int): Feature dimension at each stage. Default: [96, 192, 384, 768]\n",
+    "        drop_path_rate (float): Stochastic depth rate. Default: 0.\n",
+    "        layer_scale_init_value (float): Init value for Layer Scale. Default: 1e-6.\n",
+    "        head_init_scale (float): Init scaling value for classifier weights and biases. Default: 1.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, in_chans=3, num_classes=1000, \n",
+    "                 depths=[3, 3, 9, 3], dims=[96, 192, 384, 768], drop_path_rate=0., \n",
+    "                 layer_scale_init_value=1e-6, head_init_scale=1.,\n",
+    "                 ):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.downsample_layers = nn.ModuleList() # stem and 3 intermediate downsampling conv layers\n",
+    "        stem = nn.Sequential(\n",
+    "            nn.Conv2d(in_chans, dims[0], kernel_size=4, stride=4),\n",
+    "            LayerNorm(dims[0], eps=1e-6, data_format=\"channels_first\")\n",
+    "        )\n",
+    "        self.downsample_layers.append(stem)\n",
+    "        for i in range(3):\n",
+    "            downsample_layer = nn.Sequential(\n",
+    "                    LayerNorm(dims[i], eps=1e-6, data_format=\"channels_first\"),\n",
+    "                    nn.Conv2d(dims[i], dims[i+1], kernel_size=2, stride=1),\n",
+    "            )\n",
+    "            self.downsample_layers.append(downsample_layer)\n",
+    "\n",
+    "        self.stages = nn.ModuleList() # 4 feature resolution stages, each consisting of multiple residual blocks\n",
+    "        dp_rates=[x.item() for x in torch.linspace(0, drop_path_rate, sum(depths))] \n",
+    "        cur = 0\n",
+    "        for i in range(4):\n",
+    "            stage = nn.Sequential(\n",
+    "                *[Block(dim=dims[i], drop_path=dp_rates[cur + j], \n",
+    "                layer_scale_init_value=layer_scale_init_value) for j in range(depths[i])]\n",
+    "            )\n",
+    "            self.stages.append(stage)\n",
+    "            cur += depths[i]\n",
+    "\n",
+    "        self.norm = nn.LayerNorm(dims[-1], eps=1e-6) # final norm layer\n",
+    "        self.head = nn.Linear(dims[-1], num_classes)\n",
+    "\n",
+    "        self.apply(self._init_weights)\n",
+    "        self.head.weight.data.mul_(head_init_scale)\n",
+    "        self.head.bias.data.mul_(head_init_scale)\n",
+    "\n",
+    "    def _init_weights(self, m):\n",
+    "        if isinstance(m, (nn.Conv2d, nn.Linear)):\n",
+    "            trunc_normal_(m.weight, std=.02)\n",
+    "            nn.init.constant_(m.bias, 0)\n",
+    "\n",
+    "    def forward_features(self, x):\n",
+    "        for i in range(4):\n",
+    "            print(i, x.shape)\n",
+    "            x = self.downsample_layers[i](x)\n",
+    "            print(i, x.shape)\n",
+    "            x = self.stages[i](x)\n",
+    "            print(i, x.shape)\n",
+    "        return self.norm(x.mean([-2, -1])) # global average pooling, (N, C, H, W) -> (N, C)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.forward_features(x)\n",
+    "        x = self.head(x)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'convnext_tiny' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model \u001b[39m=\u001b[39m convnext_tiny(pretrained\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, in_22k\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39msum\u001b[39m([p\u001b[39m.\u001b[39mnumel() \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m model\u001b[39m.\u001b[39mparameters()])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'convnext_tiny' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "27830129"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = convnext_tiny(pretrained=False, in_22k=False)\n",
+    "model = ConvNeXt(in_chans=1, num_classes=17, depths=[3, 3, 9, 3], dims=[96, 192, 384, 768])\n",
+    "# original: inchans=3, num_classes=1000 -> 28589128\n",
+    "# now -> 27830129\n",
+    "\n",
     "sum([p.numel() for p in model.parameters()])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 torch.Size([128, 1, 16, 16])\n",
+      "0 torch.Size([128, 96, 4, 4])\n",
+      "0 torch.Size([128, 96, 4, 4])\n",
+      "1 torch.Size([128, 96, 4, 4])\n",
+      "1 torch.Size([128, 192, 3, 3])\n",
+      "1 torch.Size([128, 192, 3, 3])\n",
+      "2 torch.Size([128, 192, 3, 3])\n",
+      "2 torch.Size([128, 384, 2, 2])\n",
+      "2 torch.Size([128, 384, 2, 2])\n",
+      "3 torch.Size([128, 384, 2, 2])\n",
+      "3 torch.Size([128, 768, 1, 1])\n",
+      "3 torch.Size([128, 768, 1, 1])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([128, 17])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.ones((128, 1, 16, 16))\n",
+    "y = model(x)\n",
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# efficientnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
